[it] qa on update dialogs (bug 745616)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104350 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/upgradedialog.lang
+++ b/it/upgradedialog.lang
@@ -31,15 +31,15 @@ Sempre più straordinario
 
 
 ;get the latest in security
-tutte le ultime novità in materia di sicurezza
+scopri le ultime novità in materia di sicurezza
 
 
 ;experience faster performance
-prestazioni migliorate
+Prestazioni migliorate
 
 
 ;enjoy greater customization
-maggiori possibilità di personalizzazione
+Maggiori possibilità di personalizzazione
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
@@ -47,11 +47,11 @@ In breve tempo la tua versione di Firefox non sarà più al sicuro da attacchi o
 
 
 ;Stay safe online
-maggiore sicurezza online
+Maggiore sicurezza online
 
 
 ;Enjoy new features
-nuove funzioni
+Nuove funzioni
 
 
 ;URGENT!
@@ -67,7 +67,7 @@ Questo è l'ultimo avviso prima di procedere automaticamente con l'aggiornamento
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox non è più compatibile con la tua versione del sistema operativo e non sarà più al sicuro da attacchi online.
+Firefox non è più compatibile con la versione del sistema operativo che stai utilizzando e non sarà più al sicuro da attacchi online.
 
 
 ;We recommend:
@@ -87,6 +87,6 @@ Installare un aggiornamento gratuito per il tuo <a %s>sistema operativo</a>
 
 
 ;You will be prompted once more before being automatically updated.
-Ti verrà chiesto ancora una volta di aggiornare prima di procedere automaticamente con l'aggiornamento.
+Questo avviso verrà visualizzato ancora una volta prima di procedere automaticamente con l'aggiornamento.
 
 
