Bug 745610 - [he] Translate strings for variants of the upgrade dialog for 3.6 users'
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104351 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/he/upgradedialog.lang
+++ b/he/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+קיימת גרסה חדשה של Firefox שיכולה להגן עליך טוב יותר בפני סכנות אבטחה מקוונות.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+קבלת עדכוני האבטחה האחרונים
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+הנאה מיכולות התאמה אישית נוספות
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+הגרסה של Firefox שברשותך תהיה בקרוב חשופה לסכנות אבטחה מקוונות.
 
 
 ;Stay safe online
-הישאר בטוח ברשת
+הישארו בטוחים ברשת
 
 
 ;Enjoy new features
-תהנה מתכונות חדשות
+תהנו מתכונות חדשות
 
 
 ;URGENT!
@@ -59,34 +59,33 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-הגרסה של Firefox שבשימוש אינה מגנה עליך יותר בפני מתקפות מקוונות.
+הגרסה של Firefox שבשימוש אינה מגנה עליך יותר בפני סכנות אבטחה מקוונות.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
-
+זוהי התזכורת האחרונה לפני עדכון אוטומטי לגרסה האחרונה
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox לא תומך יותר בגרסת מערכת ההפעלה שברשותך מה שיחשוף אותך לסכנות אבטחה.
 
 
 ;We recommend:
-We recommend:
+ההמלצה שלנו:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+שדרוג <a %s>מערכת ההפעלה</a> שלכם
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+הורדת דפדפן תואם
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+התקנת שדרוג בחינם עבור <a %s>מערכת ההפעלה</a> שלכם
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+לפני העדכון האוטומטי תתקבל התראה נוספת.
 
 
