--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -35,7 +35,7 @@ merrni fjalën e fundit në siguri
 
 
 ;experience faster performance
-arrini punim më të shpejtë
+përfitoni punim më të shpejtë
 
 
 ;enjoy greater customization
@@ -87,6 +87,6 @@ Instalimin te <a %s>sistemi juaj operativ</a> të një përmirësimi të lirë
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Do të njoftoni edhe një herë të fundit përpara se të kryhet përditësimi vetvetiu.
 
 
