--- a/sq/upgradedialog.lang
+++ b/sq/upgradedialog.lang
@@ -35,7 +35,7 @@ merrni fjalën e fundit në siguri
 
 
 ;experience faster performance
-përfitoni punim më të shpejtë
+Përfitoni punim më të shpejtë
 
 
 ;enjoy greater customization
