--- a/da/upgradedialog.lang
+++ b/da/upgradedialog.lang
@@ -35,7 +35,7 @@ få det nyeste indenfor sikkerhed
 
 
 ;experience faster performance
-oplev hurtigere ydelse
+Oplev hurtigere ydelse
 
 
 ;enjoy greater customization
@@ -63,7 +63,7 @@ Din version af Firefox er ikke længere beskyttet mod online-angreb.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-Det er vores sidste påmindelse, inden vi automatisk opgraderer til den nyeste version
+Det er vores sidste påmindelse, inden vi automatisk opgraderer til den nyeste version.
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
@@ -75,7 +75,7 @@ Vi anbefaler:
 
 
 ;Upgrading your <a %s>operating system</a>
-At du opgraderer dit<a %s>styresystem</a>
+At du opgraderer dit <a %s>styresystem</a>
 
 
 ;Downloading a compatible browser
@@ -87,6 +87,6 @@ At du installere en gratis opgradering til dit <a %s>styresystem</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Du vil blive spurgt én gang til, inden programmet opdateres automatisk.
 
 
