update for snippets.lang in Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104360 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/snippets.lang
+++ b/rm/snippets.lang
@@ -82,42 +82,42 @@ Telechargia Firefox sin tes tablet Android per avair la forza dal web en tes mau
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Telechargia Firefox Beta</a>, ans da tes resun e gida che la proxima versiun da Firefox è anc pli scheniala per tut nos 450 milliuns utilisaders.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Emprova funcziuns e gida da las meglierar e far la meglra versiun da Firefox. <a href="%">Telechargiar ussa Firefox Beta!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Has gugent Firefox? Vuls ti far el anc meglier? <a href="%">Telechargia Firefox Beta</a> ed ans dà tes resun!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Utiliseschas ti l'ultime beta da Firefox? <a href="%">Va per ella</a> e gida da testar las pli novas funcziuns.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+N'utiliseschas ti betg la pli nova beta da Firefox? <a href="%">Va per ella</a> per vesair tge che nus preparain per la proxima versiun.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Vuls ti cundivider tes resun? <a href="%">Guarda co</a> ed ans gida da far Firefox anc pli schenial.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Utilisaders da Firefox Beta: Betg emblidar d'ans <a href="%">dar tes resun</a> per gidar da far las ultimas midadas per la proxima versiun.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Gida da far la proxima versiun da Firefox anc pli scheniala. <a href="%">Daventa in partenari</a> e cundivida Firefox Beta cun tes amis.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Envida tes amis da dar in sguard sin las novas funcziuns da Firefox. <a href="%">Daventa in partenari</a> e cundivida ussa Firefox Aurora.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Utiliseschas ti Firefox sin differents computers? Ussa pos ti sincronisar tes supplements sin tuts quels. <a href="%">Emprenda co che ti pos activar Sync.</a>
 
 
