l10n: si, new 3.6 upgrade strings, translation by Rohana Dasanayaka
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104361 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/si/upgradedialog.lang
+++ b/si/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+වඩාත් ආරක්ෂිත නව ෆයර්ෆොක්ස් නිකුතුවක් ඇත.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+නවතම ආරක්ෂිත නිකුතුව ලබාගන්න
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+ඉහළ රිසිකරණ අත්දැකීම ලබන්න
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+ඔබගේ ෆයර්ෆොක්ස් නිකුතුව අන්තර්ජාල ප්‍රහාරයන්ට ලක්විය හැකිය.
 
 
 ;Stay safe online
@@ -55,38 +55,38 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;URGENT!
-හදිස්සියි!
+හදිසියි!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-ඔබ භාවිත කරන Firefox වෙළුම තවදුරටත් සබැඳි ප්‍රහාරයන්ගෙන් ආරක්‍ෂා නොකරයි.
+ඔබ භාවිත කරන ෆයර්ෆොක්ස් වෙළුම තවදුරටත් සබැඳි ප්‍රහාරයන්ගෙන් ආරක්‍ෂා නොකරයි.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+මෙය නවතම නිකුතුවට ස්වයංක්‍රීයව යාවත්කාලීන කිරීමට පෙර ඔබට කරන අවසන් සිහි කැඳවීමයි
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+ෆයර්ෆොක්ස් තවදුරටත් අන්තර්ජාල ප්‍රහාරයන්ට ලක්විය හැකි ඔබගේ මෙහෙයුම් පද්ධති නිකුතුව සඳහා සහායය නොදක්වයි.
 
 
 ;We recommend:
-We recommend:
+අපි අනුමත කරන්නෙමු:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+ <a %s>මෙහෙයම් පද්ධතිය</a> උසස් කිරීම
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+ගැලපෙන බ්‍රව්සරයක් බාගත කිරීම
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+ඔබගේ <a %s>මෙහෙයම් පද්ධතිය</a> නොමිලයේ උසස් (upgrade) කරගන්න
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+ස්වයංක්‍රීයව යාවත්කාලීන කිරීමට පෙර එක් වරක් ඔබව යොමු කරවනු ඇත.
 
 
