update for upgradedialog.lang in Romansh (rm)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104363 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/rm/upgradedialog.lang
+++ b/rm/upgradedialog.lang
@@ -23,7 +23,7 @@ Anc pli schenial
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+I exista ina nova versiun da Firefox che ta protegia meglier encunter attatgas ord l'internet.
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,31 +31,31 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+retschaiva dapli segirezza
 
 
 ;experience faster performance
-retschaiva dapli prestaziun
+senta dapli prestaziun
 
 
 ;enjoy greater customization
-enjoy greater customization
+giauda dapli persunalisaziun
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Tia versiun da Firefox vegn prest betg pli esser protegida per attatgas ord l'internet.
 
 
 ;Stay safe online
-navighescha segir en la rait
+Navighescha segir en la rait
 
 
 ;Enjoy new features
-giauda las novas funcziuns
+Giauda las novas funcziuns
 
 
 ;URGENT!
-URGENT!
+URGENT! {ok} 
 
 
 ;Your version of Firefox is no longer protected against online attacks.
@@ -63,30 +63,30 @@ Tia versiun da Firefox na ta protegia betg pli cunter attatgas ord l'internet.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Quai è l'ultima admoniziun avant che Firefox vegn automaticamain actualisà a la pli nova versiun
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox na sustegna betg pli tia versiun dal sistem operativ e vegn daventar attatgabel ord l'internet.
 
 
 ;We recommend:
-We recommend:
+Nus recummandain:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Actualisescha tes <a %s>sistem operativ</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Telechargia in navigatur cumpatibel
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Installar ina actualisaziun gratuita per tes <a %s>sistem operativ</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Ti vegns infurmà anc ina giada avant che Firefox vegn actualisà automaticamain.
 
 
