Translated one string for German upgradedialog.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104364 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/upgradedialog.lang
+++ b/de/upgradedialog.lang
@@ -87,6 +87,6 @@ Installieren Sie ein kostenloses Upgrade für Ihr <a %s>Betriebssystem</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+Vor der automatischen Aktualisierung werden Sie erneut gefragt.
 
 
