l10N: te, upgrade dialog, translation by arjuna rao chavala
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104366 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/te/upgradedialog.lang
+++ b/te/upgradedialog.lang
@@ -23,7 +23,7 @@
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+ఆన్లైన్ దాడులనుండి మిమ్ములను సురక్షితంగా వుంచే కొత్త ఫైర్‌ఫాక్స్ రూపం వుంది. 
 
 
 ;<a %s>Get the upgrade</a> — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+రక్షణలో అత్యంత నవీకరమైనది తెచ్చుకో
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ get the latest in security
 
 
 ;enjoy greater customization
-enjoy greater customization
+మరింత మలచుకొనడాన్ని ఆనందించండి
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+మీ ఫైర్‌ఫాక్స్ రూపం త్వరలో ఆన్లైన్ దాడులకు గురిఅవగలదు.
 
 
 ;Stay safe online
@@ -63,30 +63,28 @@ Your version of Firefox will soon be vulnerable to online attacks.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+తనంతతానుగా తాజా రూపాంతరమునకు మార్చు ప్రక్రియకు ఇదే చివరి హెచ్చరిక
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+మీ ఫైర్‌ఫాక్స్ రూపం  మీ నిర్వహణ వ్యవస్థ రూపానికి తోడ్పాటు లేదు, అందువలన త్వరలో ఆన్లైన్ దాడులకు గురిఅవగలరు.
 
 
 ;We recommend:
-We recommend:
+మా సిఫారసులు:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+మీ <a %s>నిర్వహణవ్యవస్థ</a> తాజాపరచటం
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+సరితగిన విహరిణి దించుకొనుట
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+మీ %s>నిర్వహణవ్యవస్థ</a> కి ఉచిత తాజారూపం స్థాపించటం
 
 
 ;You will be prompted once more before being automatically updated.
 You will be prompted once more before being automatically updated.
-
-
