l10n: add new Android snippet for localization
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104367 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -121,3 +121,7 @@ Invita a los tos collacios a que vean les carauterístique que va tener Firefox 
 ¿Uses Firefox en más equipos? Agora pues sincronizar los tos complementos en toos ellos. <a href="%">Descubre cómo facelo con Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
