--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -121,3 +121,7 @@ Pedit mignoned da zizoleiñ keweriusterioù a zeu Firefox. <a href="%">Deuit da 
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
