--- a/ca/snippets.lang
+++ b/ca/snippets.lang
@@ -121,3 +121,7 @@ Convideu amics a fer un tast de les properes funcions del Firefox. <a href="%">F
 Feu servir el Firefox en diversos ordinadors? Ara podeu sincronitzar els complements de tots ells. <a href="%">Descobriu com activar el Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
