--- a/cs/snippets.lang
+++ b/cs/snippets.lang
@@ -110,7 +110,7 @@ Uživatelé Firefox Beta: Nezapomeňte <a href="%">poslat reakci</a>, která ná
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Pomozte učinit příští verzi Firefoxu ještě lepší. a href="%">Zapojte se do Partnerského programu</a> a sdílejte informace o Firefox Beta s přáteli. 
+Pomozte učinit příští verzi Firefoxu ještě lepší. a href="%">Zapojte se do Partnerského programu</a> a sdílejte informace o Firefox Beta s přáteli.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
@@ -119,5 +119,9 @@ Pozvěte přátele, aby se podívali na připravované novinky do Firefoxu. <a h
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Používáte Firefox na více počítačích? Nyní máte možnost napříč nimi synchronizovat své doplňky. <a href="%">Přečtěte si, jak aktivovat Sync.</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
 
