--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -119,3 +119,9 @@ Zaprosë swòjich drëchów do przezdrzeniô przińdnëch fùnkcjów Firefoksa. 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Môsz Firefoksa na wicy jak jednym kòmpùtrze? Terô mòżesz synchronizowac dodôwczi dodôwczi midzy nima. <a href="%">Czëtôj wicy ò tim jak włączëc fùnkcjã Sync.</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
