--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -116,5 +116,12 @@ Cynorthwyo i wneud y fersiwn nesaf o Firefox y gorau erioed. <a href="%">Dod yn 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Gwahodd ffrindiau i gael rhagolwg o nodweddion y Firefox nesaf. <a href="%">Dod yn Gyfaill</a> a rhannu Firefox Aurora heddiw.
 
+
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Defnyddio Firefox ar nifer o gyfrifiaduron? Nawr mae modd cydweddu eich ychwanegiadau ar eu traws i gyd. <a href="%">Dysgu sut mae gweithredu Sync.</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
