--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -121,3 +121,7 @@ Inviter venner til at se de kommende funktioner i Firefox, og <a href="%">del Fi
 Bruger du Firefox på flere computere? Nu kan du synkronisere dine tilføjelser på dem alle. <a href="%">Find ud af, hvordan du aktiverer Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
