--- a/en-GB/snippets.lang
+++ b/en-GB/snippets.lang
@@ -119,4 +119,6 @@ Invite friends to preview upcoming Firefox features. <a href="%">Become an Affil
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
 
