--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -121,3 +121,7 @@ Invitu geamikojn provi estontajn trajtojn de Firefox. <a href="%">Iĝu kunlabora
 Ĉu vi uzas Firefox en pluraj komputiloj? Vi povas nun speguli viajn aldonaĵojn inter ili ĉiuj. <a href="%">Lernu pli pri la ŝalto de Speguli (Sync).</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
