--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -121,6 +121,10 @@ Invita a tus amigos a que vean las características que tendrá Firefox en el fu
 ¿Estás usando Firefox en varios equipos? Ahora puedes sincronizar tus complementos en todos ellos. <a href="%">Descubre cómo activar Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Busca tuits, amigos o temas del momento desde la barra de búsquedas. Haz clic en el icono de búsqueda, en la parte superior derecha de Firefox, y selecciona Twitter.
 
