--- a/fa/snippets.lang
+++ b/fa/snippets.lang
@@ -121,3 +121,7 @@
 از فایرفاکس بر روی چند رایانه استفاده می‌کنید؟ از الان می‌توانید افزونه‌های خود را بین آن‌ها همگام کنید. <a href="%">چگونگی فعال‌سازی این امکان را یاد بگیرید.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
