--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -121,6 +121,10 @@ Pozovite prijatelje na isprobavanje najnovijih mogućnosti u Firefoxu. <a href="
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Tražite tweetove, prijatelje ili popularne teme izravno iz polja za pretragu. Kliknite na ikonu pretraživača u gornjem desnom dijelu Firefoxa i odaberite Twitter.
 
