--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -121,3 +121,7 @@ Hívja meg barátait, hogy megnézhessék az új funkciókat. <a href="%">Legyen
 Több számítógépen is használ Firefoxot? Mostantól szinkronizálhatja a kiterjesztéseit közöttük. <a href="%">Ismerje meg, hogyan aktiválhatja a Sync szolgáltatást.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
