--- a/hy-AM/snippets.lang
+++ b/hy-AM/snippets.lang
@@ -121,3 +121,7 @@ Firefo Բետայի օգտվողները. Մի մոռացեք <a href="%">հայ
 Օգտագործու՞մ եք Firefox-ը մի քանի համակարգիչներում։ Այժմ Դուք կարող եք համաժամեցնել Ձեր հավելումները բոլոր համակարգիչներում։ <a href="%">Ահա, թե ինչպես ակտիվացնել Սինքը։</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
