--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -121,3 +121,7 @@ Invîta i amîxi a védde in antìçipo i megiorménte do Firefox. <a href="%">D
 T'adêuvi o Firefox in tànti computer? Òua ti peu sincronizâ i teu conponénti azónti in sci mæximi. <a href="%">Mîa chi cómme ativâ o Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
