--- a/lt/snippets.lang
+++ b/lt/snippets.lang
@@ -121,3 +121,7 @@ Pasiūlykite savo draugams susipažinti su būsimųjų „Firefox“ laidų nauj
 Naudojatės „Firefox“ keliuose kompiuteriuose? Dabar galite tarp jų sinchronizuoti priedus. <a href="%">Sužinokite, kaip įjungti sinchronizavimą.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
