--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -121,3 +121,7 @@ Uzaicini draugus ievērtēt jaunās Firefox iespējas. <a href="%">Kļūsti par 
 Izmanto Firefox no vairākiem datoriem? Tagad Tu vari sinhronizēt papildinājumus starp visiem šiem datoriem. <a href="%">Uzzini par Sinhronizāciju.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
