--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -121,3 +121,7 @@
 बरेच संगणकांवर फायरफॉक्सचा वापर? आता सगळ्यांवर ॲडऑन्स्ला सिंक्रोनाइज करणे शक्य आहे. <a href="%">सिंक सुरू करण्याविषयी माहिती मिळवा.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
