--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -1,5 +1,6 @@
 # these text snippets are mostly used on about:home
 
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Neem Firefox overal mee naartoe! De nieuwste Firefox voor Android staat voor u klaar. <a href="%s">Download hem nu.</a>
 
@@ -118,4 +119,9 @@ Vraag vrienden om komende functies in Firefox te bekijken. <a href="%">Word een 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Gebruikt u Firefox op meerdere computers? U kunt er nu add-ons tussen synchroniseren. <a href="%">Lees hier hoe u Sync kunt activeren.</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
 
