--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -121,3 +121,7 @@ Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us 
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
