--- a/rm/snippets.lang
+++ b/rm/snippets.lang
@@ -121,3 +121,7 @@ Envida tes amis da dar in sguard sin las novas funcziuns da Firefox. <a href="%"
 Utiliseschas ti Firefox sin differents computers? Ussa pos ti sincronisar tes supplements sin tuts quels. <a href="%">Emprenda co che ti pos activar Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
