--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -121,6 +121,10 @@ Povabite znance, da si ogledajo najnovejše funkcije v Firefoxu. <a href="%">Pos
 Uporabljate Firefox na večih računalnikih? Dodatke lahko sedaj sinhronizirate med njimi. <a href="%">Preberite si navodila za aktiviranje Synca.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Iščite po tvitih, med prijatelji in novimi temami v vrstici za iskanje. Kliknite v Firefoxu desno zgoraj na ikono za iskanje in izberite Twitter.
 
