--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -121,6 +121,10 @@ Ftoni miq tuajt të marrin një ide mbi veçoritë e ardhshme të Firefox-it. <a
 E përdorni Firefox-in në disa kompjutera? Tani mundeni të njëkohësoni shtesat tuaj në krejt ata. <a href="%">Shihni se si të aktivizoni Sync-un.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Çmime të vyera! Anëtarë jurie nga Hollivudi! Pika çuditëse! <a href="%">Merrni Pjesë te Firefox Flicks</a>, një garë mbarëbotërore videosh që të tregojnë historinë tonë, ku mund të votoni për të parapëlqyerën tuaj!
 
