--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -117,11 +117,15 @@ Hjälp oss att göra nästa version av Firefox ännu mer fantastisk. <a href="%"
 Bjud in dina vänner till en förhandstitt på kommande Firefox-funktioner. <a href="%">Bli en samarbetspartner</a> och dela Firefox Aurora idag.
 
 
-;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-Fantastiska priser! Hollywooddomare! Utropstecken! <a href="%">Anmäl dig till Firefox Flicks</a>, den globala videotävlingen, med din film som berättar om oss – eller rösta på dina favoriter!
-
-
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Använder du Firefox på flera datorer? Nu kan du synkronisera dina tillägg mellan dem. <a href="%">Läs om hur du aktiverar Sync.</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
+;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+Fantastiska priser! Hollywooddomare! Utropstecken! <a href="%">Anmäl dig till Firefox Flicks</a>, den globala videotävlingen, med din film som berättar om oss – eller rösta på dina favoriter!
 
 
