--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -121,6 +121,10 @@ Pozovite prijatelje da vide nadolazeće mogućnosti Firefoxa. <a href="%">Postan
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Pretražujte Tweetove, prijatelje ili aktuelne teme direktno iz trake za pretragu. Kliknite na ikonicu za pretragu u gornjem desnom uglu Firefoxa i izaberite Twitter.
 
