--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -121,6 +121,10 @@ Laden Sie Freunde ein, sich vorab die künftigen Firefox-Versionen anzusehen. <a
 Verwenden Sie Firefox auf mehreren Rechnern? Jetzt können Sie Ihre Add-ons zwischen allen synchronisieren. <a href="%">Erfahren Sie, wie Sie Sync aktivieren können.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Tolle Preise! Hollywood-Richter! Ausrufezeichen! <a href="%">Machen Sie mit bei Firefox Flicks</a>, dem weltweiten Videowettbewerb, um unsere Geschichte zu erzählen, oder stimmen Sie für Ihre Favoriten ab!
 
