--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -121,3 +121,7 @@
 Χρησιμοποιείτε τον Firefox σε πάνω από ένα υπολογιστή; Τώρα μπορείτε να συγχρονίσετε και τα προσθετα σας. <a href="%">Δείτε πως να ενεργοποιήσετε το Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
