--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -121,3 +121,7 @@ Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href
 ¿Usás Firefox en muchos equipos? Ahora podés sincronizar tus complementos entre tus Firefox. <a href="%">Mirá cómo activar Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
