--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -1,3 +1,6 @@
+# these text snippets are mostly used on about:home
+
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Nawor Firefox ɗo njahataa fof! Firefox cakkitiiɗo mo Android ena ɗoo hebii tolbec ngam weytaare maa. <a href="%s">Heɓ ɗum jooni.</a>
 
@@ -116,3 +119,9 @@ Bismo musidɓe maa yoo ngar njiya fannuuji Firefox garooji. <a href="%">Yantu e 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 Aɗa huutoroo Firefox e ordianteeruuji keewɗi? Jooni aɗa waawi sanngoɗinde ɓeyditte maa hakkunde majji kala. <a href="%">Ƴeew hol no Sync hurminirtee</a>
+
+
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
