--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -121,6 +121,10 @@ Invitez vos amis à découvrir en avant-première les futures fonctionnalités d
 Vous utilisez Firefox sur plusieurs ordinateurs&nbsp;? Il vous est maintenant possible de synchroniser vos modules complémentaires sur toutes vos machines. <a href="%">Découvrez comment activer Sync</a>.
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Des grands prix&nbsp;! Des juges hollywoodiens&nbsp;! Des points d'exclamation&nbsp;! Participez à <a href="%">Firefox Flicks</a>, le concours vidéo mondial pour raconter notre histoire, ou votez pour vos vidéos préférées&nbsp;!
 
