--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -121,3 +121,7 @@ Invite aos seus amigos a que vexan as características que terá o Firefox no fu
 Usa o Firefox en varios equipos? Agora pode sincronizar os complementos en todos eles. <a href="%">Descubra como activar Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
