--- a/he/snippets.lang
+++ b/he/snippets.lang
@@ -121,3 +121,7 @@ Firefox לאנדרואיד עכשיו מותאם היטב לדרך שבה אתם
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
