--- a/it/snippets.lang
+++ b/it/snippets.lang
@@ -121,3 +121,7 @@ Invita i tuoi amici a scoprire le novità di Firefox in arrivo. <a href="%">Dive
 Utilizzi Firefox su diversi computer? Ora puoi sincronizzare anche i componenti aggiuntivi. <a href="%">Scopri come attivare Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
