--- a/ja/snippets.lang
+++ b/ja/snippets.lang
@@ -121,6 +121,10 @@ Invite friends to preview upcoming Firefox features. <a href="%">Become an Affil
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}ツイート、友人、旬の話題を検索バーから直接検索できます。Firefox の画面右上にある検索エンジンのアイコンをクリックして Twitter を選ぶだけです。
 
