--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -121,6 +121,10 @@ Firefox для Android теперь оптимизирован для работ
 Используете Firefox на нескольких компьютерах? Теперь вы можете синхронизировать между ними ваши дополнения. <a href="%">Узнайте, как активировать синхронизацию.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Великолепные призы! Судьи из Голливуда! Восклицательные знаки! <a href="%">Примите участие в Firefox Flicks</a>, глобальном конкурсе видео, чтобы рассказать нашу историю, или проголосовать за любимые видео!
 
