--- a/zh-CN/snippets.lang
+++ b/zh-CN/snippets.lang
@@ -121,6 +121,10 @@ Invite friends to preview upcoming Firefox features. <a href="%">Become an Affil
 Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
+;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 
