--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -122,7 +122,7 @@ Verwenden Sie Firefox auf mehreren Rechnern? Jetzt können Sie Ihre Add-ons zwis
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Schnell, schnell, schnell. <a %s>Firefox für Android hat gerade ein großes Upgrade erhalten</a>. Helfen Sie uns, die Botschaft zu verbreiten.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
