--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -122,7 +122,7 @@ E përdorni Firefox-in në disa kompjutera? Tani mundeni të njëkohësoni shtes
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Shpejt, shpejt, shpejt. <a %s>Firefox-i për Android sapo u përditësua fuqishëm</a>. Na ndihmoni të përhapim lajmin.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
